# stoic-wisdom-api

./: .env.example  .gitignore  API_EXAMPLES.md  ARCHITECTURE.md  AZURE_SETUP.md  BDD_TDD_GUIDE.md  CHECKLIST.md  COMPLETE_DEPLOYMENT_GUIDE.md  CONTENT_GUIDELINES.md  Cargo.toml  Dockerfile  FRONTEND_COMPLETE.md  FRONTEND_DEPLOYMENT.md  FRONTEND_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_SUMMARY.md  PHASE1_SCOPE.md  POSTGRES_AUDIT.md  PROJECT_STRUCTURE.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  SPECIFICATION.md  TEST_EVIDENCE.md  TEST_EVIDENCE_REPORT.md  docker-compose.yml  render.yaml
.github/workflows/: azure-deploy.yml  azure-static-web-apps-ashy-rock-0f60b760f.yml  azure-static-web-apps-salmon-ocean-0433f870f.yml  azure-static-web-apps.yml
azure/: DEPLOYMENT_GUIDE.md  aci-deployment.yaml  deploy.sh
frontend/: README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts
migrations/: 001_initial_schema.sql  002_seed_philosophers_themes.sql  006_fix_serial_type_mismatch.sql  007_convert_year_columns_to_bigint.sql  008_revert_year_columns_to_integer.sql  009_add_full_text_to_quotes.sql  010_populate_full_text_quotes.sql  011_fix_column_types_idempotent.sql
migrations-sqlite/: 003_seed_quotes.sql  005_seed_quote_themes.sql  006_add_full_text_to_quotes.sql
migrations-sqlite-backup/: 001_initial_schema.sql  004_seed_timeline_incidents.sql
scripts/: benchmark.sh  collect-test-evidence.sh  migrate_sqlite_to_postgres.sh  reset_migrations.sql
src/: handlers.rs  main.rs  models.rs
tests/: integration_tests.rs
(+27 files in other folders)
